<resources>
    <string name="app_name">StorageApp</string>
    <string name="pictures">Pictures</string>
    <string name="to_take_camera_picture">To take camera picture</string>
    <string name="image_in_internal_memory">Image in internal memory</string>
    <string name="image_for_cancel_the_selection">Image for cancel the selection</string>
    <string name="image_for_deletion">Image for deletion</string>
    <string name="image_selection_indication">image selection indication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compas">Compas</string>
    <string name="pdf_report">pdf report</string>
    <string name="start">Start</string>
    <string name="permission">Permission</string>
    <string name="why_this_permission">Why this permission</string>
    <string name="why_permission_required">Why Permission Required?</string>
    <string name="reason">To Mange your files, allow PDF reader to access your files. Providing permission to this application do not harm your privacy. Without Permission app cannot work smoothly. You should give the permission to go to next step.</string>
    <string name="allow">Allow</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="setting_permission">Setting Permission</string>
    <string name="to_manage_your_files_allow_pdf_reader_to_access_your_files">To manage your files,Allow PDF reader to access your files</string>
    <string name="open_settings">Open Settings</string>
    <string name="image_options">Image Options</string>
    <string name="for_sort">For Sort</string>
    <string name="search_pdf">Search Pdf</string>
    <string name="documents">Documents</string>
    <string name="recent">Recent</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="navigation_drawer_header_image">Navigation Drawer Header Image</string>
    <string name="custom_pdf_viewer_application">Custom Pdf Viewer Application</string>
    <string name="organize_all_the_pdf_files_at_one_place">Organize all the pdf files at one place</string>
    <string name="home">Home</string>
    <string name="image_pdf_file">Image Pdf file</string>
    <string name="image_selected_and_unselected">image selected and unselected</string>
    <string name="no_pdf_found">No Pdf found</string>
    <string name="no_files_found">No Files Found</string>
    <string name="image_bookmark">Image BookMark</string>
    <string name="no_bookmarks_yet">No Bookmarks yet</string>
    <string name="no_bookmarked_files_found">No Bookmarked files found</string>
    <string name="back_button_from_the_search_page">Back button from the search page</string>
    <string name="no_results_found">No Results found</string>
    <string name="file_does_not_exists">File does not exists</string>
    <string name="back_button">Back Button</string>
</resources>