<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgSettings"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/settings_icon"
        />

    <TextView
        android:id="@+id/textSettingPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSettings"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:textSize="18sp"
        android:text="@string/setting_permission"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textSettingsDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textSettingPermission"
        app:layout_constraintEnd_toEndOf="@+id/textSettingPermission"
        app:layout_constraintTop_toBottomOf="@+id/textSettingPermission"
        android:layout_marginTop="14dp"
        android:text="@string/to_manage_your_files_allow_pdf_reader_to_access_your_files"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpenSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSettingsDescription"
        android:paddingTop="17dp"
        android:paddingBottom="17dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:backgroundTint="#6499F3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="23sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>