<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_book_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/navigation_drawer_header_image"
        />

    <TextView
        android:id="@+id/textCustomPdfViewer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/custom_pdf_viewer_application"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textAdText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCustomPdfViewer"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="8dp"
        android:text="@string/organize_all_the_pdf_files_at_one_place"
        android:textAlignment="center"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>