<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pdfreader.permissioninfo.PermissionInfoFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/text_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/permission"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgThinkingPerson"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_thinking_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/why_this_permission"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:id="@+id/text_permission_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgThinkingPerson"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="14dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/why_permission_required"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/text_permission_reason_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_permission_title"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="14dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/reason"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAllowPermission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/allow"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_medium"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_permission_reason_description"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>